--- a/apps/bare-expo/android/gradle.properties
+++ b/apps/bare-expo/android/gradle.properties
@@ -20,3 +20,7 @@
 org.gradle.jvmargs=-Xmx10240M -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
+
+# The hosted JavaScript runtime
+# Supported values: JS_RUNTIME = "hermes" | "jsc"
+JS_RUNTIME=hermes
